--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,22 @@
+button{
+    outline: none;
+    background: teal;
+    color: white;
+    font-family: sans-serif;
+    font-size: 16px;
+    padding: 15px;
+    border-radius: 5px;
+    border: none;
+    margin: 100px auto;
+    cursor: pointer;
+    transition: all .3s;
+}
 
+button:hover {
+    background: darkslategrey;
+    transform: translateY(-4px);
+}
+
+button:active{
+    transform: translateY(-2px);
+}
